Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-28020

[REG 8->9] Cannot choose debugger in kit

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • Not Evaluated
    • Qt Creator 9.0.0-beta1
    • Qt Creator 9.0.0-beta1
    • Debugger
    • None
    • 40a1a719fe (qt-creator/qt-creator/master) 40a1a719fe (qt-creator/qt-creator/qds-dev) 40a1a719fe (qt-creator/qt-creator/9.0)

    Description

      Every time I try to choose a debugger, the combobox reverts to None.

      Attachments

        For Gerrit Dashboard: QTCREATORBUG-28020
        # Subject Branch Project Status CR V

        Activity

          People

            kandeler Christian Kandeler
            orgads Orgad Shaneh
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes